[gd_scene load_steps=7 format=3 uid="uid://83oaet2m3mx1"]

[ext_resource type="Script" uid="uid://b6gn85xmbaqyd" path="res://examples/attribute_buffs_demo/attribute_buffs_demo.gd" id="1_o458e"]
[ext_resource type="AttributeSet" uid="uid://en06khsjql3a" path="res://examples/attribute_buffs_demo/attribute_buffs_attribute_set.tres" id="2_6ufkv"]

[sub_resource type="LabelSettings" id="LabelSettings_6ufkv"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o458e"]
bg_color = Color(0.186086, 0.0861573, 0.0766996, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ufkv"]
bg_color = Color(0.546247, 0, 0.00990362, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o458e"]

[node name="AttributeBuffsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o458e")

[node name="AttributeContainer" type="AttributeContainer" parent="."]
attribute_set = ExtResource("2_6ufkv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Health"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "
In this example you can add or remove a fixed  
amount of health from this health bar.

To do this, an AttributeBuff is created and added
to the AttributeContainer node when a button is clicked.
"
label_settings = SubResource("LabelSettings_6ufkv")
horizontal_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.835294, 0.803922, 0.819608)
theme_override_styles/background = SubResource("StyleBoxFlat_o458e")
theme_override_styles/fill = SubResource("StyleBoxFlat_6ufkv")
value = 50.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_o458e")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 4
alignment = 2

[node name="RemoveHealthButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Health"

[node name="AddHealthButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add Health"
